--- a/angel.conf
+++ b/angel.conf
@@ -1,6 +1,6 @@
 server {
   listen 80 default_server;
-  root /home/web/app/web; # Set to your static files directory
+  root /home/vagrant/app/web; # Set to your static files directory
   
   location / {
     try_files $uri @proxy; # Try to serve static files; fallback to proxied Angel server
